--- a/config/assets_ucits_compact.yml
+++ b/config/assets_ucits_compact.yml
@@ -4,5 +4,5 @@ end:   "2025-01-01"
 out_dir: "data/raw"
 adj_close: true
 
-equities: [SPY, IEFA, IEMG, IAU]   # IEFA = Developed ex-US (ohne Kanada), IEMG = Emerging Markets, IAU = Gold
-crypto:   [BTC-USD, ETH-USD]
+equities: ["SPY", "IEFA", "IEMG", "IAU"]   # IEFA = Developed ex-US (ohne Kanada), IEMG = Emerging Markets, IAU = Gold
+crypto:   ["BTC-USD", "ETH-USD"]
