Work around für Daten download und Umstrukturierung abgeschlossen. Prozess ist downlaod RAW --> aligne RAW auf richtige Handeltage und fülle Spalten die keine Daten haben mit NaN oder 0 auf speicher als Multiindex Datei unter INTERIM ab --> füge Features hinzu und lade tägliche Zinsen herunter speichere beides unter CLEAN ab
Parquets stichprobenartig kontrolliert

ausführliche Kommentare folgen noch

--- a/config/data_spec.yml
+++ b/config/data_spec.yml
@@ -3,7 +3,14 @@ interval: 1d            # Daily bars
 
 bar_type: time          # (später: dollar/volume/imbalance)
 prefer_intraday: false  # Intraday später anschließbar
-exec_price: open_next   # Referenzpreis für T+1-Ausführung (alternativ: vwap_next)
+exec_price: open_next # Referenzpreis für T+1-Ausführung (alternativ: vwap_next)
+
+assets:
+  file: config/assets_regions.yml
+
+window:
+  start: "2015-01-01"
+  end: "2025-01-01"
 
 return_type: log        # für return_raw (log oder linear)
 
