--- a/config/assets_regions.yml
+++ b/config/assets_regions.yml
@@ -1,8 +1,6 @@
 name: regions
-start: "2015-01-01"
-end:   "2025-01-01"
 out_dir: "data/raw"
 adj_close: true
 
-equities: ["SPY", "IEUR", "EWJ", "IEMG","SXR2", "IAU"]   # IEUR = Europa, EWJ = Japan, IEMG = Emerging Markets, SXR2 = Kanada,  IAU = Gold
+equities: ["SPY", "IEUR", "EWJ", "IEMG","EWC", "IAU"]   # IEUR = Europa, EWJ = Japan, IEMG = Emerging Markets, SXR2 = Kanada,  IAU = Gold
 crypto:   ["BTC-USD", "ETH-USD"]
